sinalcabo/force-app/main/default/objects/Regra_Aprovacao__c/Regra_Aprovacao__c.object-meta.xml
<CustomObject>
    <description>SinalCabo - matriz de aprovacao: por colaborador x tipo de negocio, define autonomia (N0), niveis N1/N2 por valor e margem minima, criterio e aprovadores/backup.</description>
    <label>Regra de Aprovação</label>
    <nameField>
        <label>Nome da Regra</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Regras de Aprovação</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>