sinalcabo/force-app/main/default/objects/Regra_Aprovacao__c/fields/Activa__c.field-meta.xml
<CustomField>
    <fullName>Activa__c</fullName>
    <defaultValue>true</defaultValue>
    <description>SinalCabo - regra activa (entra na avaliacao).</description>
    <inlineHelpText>Só regras activas entram na avaliação. Desmarque para retirar a regra sem a apagar: o registo e o histórico mantêm-se.</inlineHelpText>
    <label>Activa</label>
    <type>Checkbox</type>
</CustomField>