sinalcabo/force-app/main/default/objects/Regra_Aprovacao__c/fields/Aprovador_N1__c.field-meta.xml
<CustomField>
    <fullName>Aprovador_N1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SinalCabo - utilizador que aprova no nivel 1.</description>
    <inlineHelpText>Quem aprova no Nível 1, o primeiro da cadeia. As alterações valem para as próximas submissões: propostas já em circuito não mudam de aprovador.</inlineHelpText>
    <label>Aprovador N1</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Regras (Aprovador N1)</relationshipLabel>
    <relationshipName>Regras_Aprovador_N1</relationshipName>
    <type>Lookup</type>
</CustomField>