sinalcabo/force-app/main/default/objects/Regra_Aprovacao__c/fields/Aprovador_N2__c.field-meta.xml
<CustomField>
    <fullName>Aprovador_N2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SinalCabo - utilizador que aprova no nivel 2.</description>
    <inlineHelpText>Quem aprova no Nível 2, depois do N1. Se ficar vazio, a cadeia pára no nível anterior, mesmo que os limiares exijam mais.</inlineHelpText>
    <label>Aprovador N2</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Regras (Aprovador N2)</relationshipLabel>
    <relationshipName>Regras_Aprovador_N2</relationshipName>
    <type>Lookup</type>
</CustomField>