sinalcabo/force-app/main/default/objects/Regra_Aprovacao__c/fields/Aprovador_N3__c.field-meta.xml
<CustomField>
    <fullName>Aprovador_N3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SinalCabo - utilizador que aprova no nivel 3 (topo da cadeia, tipicamente o PVD).</description>
    <inlineHelpText>Quem aprova no Nível 3, o topo da cadeia (tipicamente o PVD). Se ficar vazio, a cadeia pára no N2.</inlineHelpText>
    <label>Aprovador N3</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Regras (Aprovador N3)</relationshipLabel>
    <relationshipName>Regras_Aprovador_N3</relationshipName>
    <type>Lookup</type>
</CustomField>