sinalcabo/force-app/main/default/objects/Regra_Aprovacao__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <description>SinalCabo - area (mesmo GVS da cascata).</description>
    <inlineHelpText>Área de negócio dentro da Direção escolhida. Entra na chave da regra: distingue regras do mesmo Tipo em áreas diferentes. Filtra os Tipos de Negócio disponíveis.</inlineHelpText>
    <label>Área</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Direccao__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>SC_Area_Negocio</valueSetName>
    </valueSet>
</CustomField>