sinalcabo/force-app/main/default/objects/Regra_Aprovacao__c/fields/Backup_N1__c.field-meta.xml
<CustomField>
    <fullName>Backup_N1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SinalCabo - delegado/backup do aprovador N1.</description>
    <label>Backup N1</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Regras (Backup N1)</relationshipLabel>
    <relationshipName>Regras_Backup_N1</relationshipName>
    <type>Lookup</type>
</CustomField>