sinalcabo/force-app/main/default/objects/Regra_Aprovacao__c/fields/Backup_N2__c.field-meta.xml
<CustomField>
    <fullName>Backup_N2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SinalCabo - delegado/backup do aprovador N2.</description>
    <label>Backup N2</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Regras (Backup N2)</relationshipLabel>
    <relationshipName>Regras_Backup_N2</relationshipName>
    <type>Lookup</type>
</CustomField>