sinalcabo/force-app/main/default/objects/Regra_Aprovacao__c/fields/Backup_N3__c.field-meta.xml
<CustomField>
    <fullName>Backup_N3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SinalCabo - delegado/backup do aprovador N3.</description>
    <label>Backup N3</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Regras (Backup N3)</relationshipLabel>
    <relationshipName>Regras_Backup_N3</relationshipName>
    <type>Lookup</type>
</CustomField>