sinalcabo/force-app/main/default/objects/Regra_Aprovacao__c/fields/Chave__c.field-meta.xml
<CustomField>
    <fullName>Chave__c</fullName>
    <description>Colaborador + Tipo de Negócio + Área (chave única, evita duplicados)</description>
    <externalId>true</externalId>
    <inlineHelpText>Compõe-se automaticamente ao gravar (Colaborador|Tipo de Negócio|Área). Não precisa de preencher. Se der erro de duplicado, já existe uma regra para essa combinação.</inlineHelpText>
    <label>Chave</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>