sinalcabo/force-app/main/default/objects/Regra_Aprovacao__c/fields/Colaborador__c.field-meta.xml
<CustomField>
    <fullName>Colaborador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SinalCabo - dono comercial a que esta regra se aplica.</description>
    <inlineHelpText>O comercial dono da oportunidade a quem esta regra se aplica. O motor procura a regra pela combinação Colaborador, Tipo de Negócio e Área.</inlineHelpText>
    <label>Colaborador</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Regras (Colaborador)</relationshipLabel>
    <relationshipName>Regras_Colaborador</relationshipName>
    <type>Lookup</type>
</CustomField>