sinalcabo/force-app/main/default/objects/Regra_Aprovacao__c/fields/Condicao__c.field-meta.xml
<CustomField>
    <fullName>Condicao__c</fullName>
    <description>SinalCabo - como combinar valor e margem.</description>
    <inlineHelpText>Define como o valor e a margem determinam o nível de aprovação. Com Valor OU Margem (a opção por omissão se ficar vazio), basta um dos dois eixos ultrapassar os limiares para subir de nível. Com Valor E Margem, só sobe quando ambos ultrapassam. Só Valor e Só Margem ignoram o outro eixo.</inlineHelpText>
    <label>Critério</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Valor OU Margem</fullName>
            </value>
            <value>
                <fullName>Valor E Margem</fullName>
            </value>
            <value>
                <fullName>Só Valor</fullName>
            </value>
            <value>
                <fullName>Só Margem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>