sinalcabo/force-app/main/default/objects/Regra_Aprovacao__c/fields/Direccao__c.field-meta.xml
<CustomField>
    <fullName>Direccao__c</fullName>
    <description>SinalCabo - direccao (mesmo GVS da cascata, cruzamento por valor).</description>
    <inlineHelpText>Direção de negócio do colaborador (IT, DN, Energia ou TTC). Escolha primeiro: filtra as Áreas disponíveis. Serve de referência e das listas por direção; o motor decide pela Área e pelo Tipo.</inlineHelpText>
    <label>Direção</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SC_Direccao_Negocio</valueSetName>
    </valueSet>
</CustomField>