sinalcabo/force-app/main/default/objects/Regra_Aprovacao__c/fields/Margem_Min_N0__c.field-meta.xml
<CustomField>
    <fullName>Margem_Min_N0__c</fullName>
    <description>SinalCabo - margem minima para autonomia.</description>
    <inlineHelpText>Piso de margem para autonomia, em pontos percentuais (15 significa 15%, não 0,15). Margem abaixo deste piso sobe pelo menos ao Nível 1; margem igual ao piso ainda cumpre.</inlineHelpText>
    <label>Margem mín. N0 (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>