sinalcabo/force-app/main/default/objects/Regra_Aprovacao__c/fields/Margem_Min_N1__c.field-meta.xml
<CustomField>
    <fullName>Margem_Min_N1__c</fullName>
    <description>SinalCabo - margem minima nivel 1.</description>
    <inlineHelpText>Piso de margem do Nível 1, em pontos percentuais. Margem abaixo deste piso exige também o Nível 2.</inlineHelpText>
    <label>Margem mín. N1 (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>