sinalcabo/force-app/main/default/objects/Regra_Aprovacao__c/fields/Margem_Min_N2__c.field-meta.xml
<CustomField>
    <fullName>Margem_Min_N2__c</fullName>
    <description>SinalCabo - margem minima nivel 2.</description>
    <inlineHelpText>Piso de margem do Nível 2, em pontos percentuais. Margem abaixo deste piso exige também o Nível 3, se a regra tiver Aprovador N3.</inlineHelpText>
    <label>Margem mín. N2 (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>