sinalcabo/force-app/main/default/objects/Regra_Aprovacao__c/fields/Tipo_Negocio__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Negocio__c</fullName>
    <description>SinalCabo - tipo de negocio (mesmo GVS da cascata). Dependente da Area, com os mesmos pares da Opportunity: impede gravar uma regra com um par impossivel, que carregaria e nunca corresponderia a nenhuma oportunidade.</description>
    <inlineHelpText>Tipo de negócio dentro da Área escolhida. Junto com o Colaborador e a Área, determina a que oportunidades a regra se aplica.</inlineHelpText>
    <label>Tipo de Negócio</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Area__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>SC_Tipo_Negocio</valueSetName>
    </valueSet>
</CustomField>