sinalcabo/force-app/main/default/objects/Regra_Aprovacao__c/fields/Valor_N0__c.field-meta.xml
<CustomField>
    <fullName>Valor_N0__c</fullName>
    <description>SinalCabo - limite de autonomia do colaborador (sem aprovacao).</description>
    <inlineHelpText>Tecto de autonomia: até este valor, inclusive, o comercial decide sozinho. Acima, a proposta exige pelo menos o Nível 1.</inlineHelpText>
    <label>Autonomia (N0) até</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>