sinalcabo/force-app/main/default/objects/Regra_Aprovacao__c/fields/Valor_N1__c.field-meta.xml
<CustomField>
    <fullName>Valor_N1__c</fullName>
    <description>SinalCabo - limite ate ao qual basta aprovacao N1.</description>
    <inlineHelpText>Até este valor, inclusive, basta a aprovação do Nível 1. Acima, exige também o Nível 2.</inlineHelpText>
    <label>Nível 1 até</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>