sinalcabo/force-app/main/default/objects/Regra_Aprovacao__c/fields/Valor_N2__c.field-meta.xml
<CustomField>
    <fullName>Valor_N2__c</fullName>
    <description>SinalCabo - tecto do nivel 2 (acima deste valor exige N3). Rotulo corrigido de &quot;Nivel 2 a partir de&quot; a 26/08/2026 para bater com o Apex.</description>
    <inlineHelpText>Tecto do Nível 2: até este valor, inclusive, a cadeia fica pelo Nível 2. Acima, exige também o Nível 3, se a regra tiver Aprovador N3; sem N3, a cadeia pára no último aprovador preenchido.</inlineHelpText>
    <label>Nível 2 até</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>