sinalcabo/force-app/main/default/objects/Regra_Aprovacao__c/listViews/Direccao_Energia.listView-meta.xml
<ListView>
    <fullName>Direccao_Energia</fullName>
    <columns>NAME</columns>
    <columns>Colaborador__c</columns>
    <columns>Area__c</columns>
    <columns>Tipo_Negocio__c</columns>
    <columns>Valor_N0__c</columns>
    <columns>Valor_N1__c</columns>
    <columns>Aprovador_N1__c</columns>
    <columns>Aprovador_N2__c</columns>
    <columns>Activa__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Direccao__c</field>
        <operation>equals</operation>
        <value>Energia</value>
    </filters>
    <label>Regras Energia</label>
</ListView>